--- a/pom.xml
+++ b/pom.xml
@@ -95,19 +95,19 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://34.207.183.242:8081/repository/tesla-releases/</url>
+	      http://3.89.183.94:8081/repository/tesla-re/
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://34.207.183.242:8081/repository/tesla-snapshots/</url>
+	      http://3.89.183.94:8081/repository/tesla-sp/
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
 	<build>
-		<finalName>douala</finalName>
+		<finalName>tesla</finalName>
 		
 		<plugins>
 			<plugin>
